--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,7 +1,29 @@
 ﻿@page "/"
+    <h1>在台潘詠周系陳太老架頭套 - 源自陳發科</h1>
+    <h2>指導老師：江弦蒼老師</h2>
+    <h3>【11 演手肱拳】</h3>
 
-<h1>Hello, world!</h1>
 
-Welcome to your new app.
+    <video width="640" controls>
+        <source src="11.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+
+
+    <h3>定式口訣</h3>
+    <ol>
+        <li>  身體稍微前移，右手再往前伸，左手再略微下按。       </li>
+        <li>   腰向左轉，領兩手逆纏全繞，右手拉回胸前，左手外繞至左前方。      </li>
+        <li>  身體右轉，右腳掌打開，重心移至右腳，左腳隨勢虛點於右腳旁，雙手順纏交叉於胸前，掌心朝內。       </li>
+        <li>  右腳坐實，左腳以腳跟內側，向左前方鏟出。       </li>
+        <li>   腰向右旋，重心漸往左腳移去，兩手分向兩側撥開，右手繞到右腰旁，準備握拳，左手隨勢向前推去。      </li>
+        <li>   扭腰扣腳身轉正，右拳向前方發勁送出，高與肩平，左手肘向後發勁拉回，左手置於腰際。      </li>
+
+
+    </ol>
+
+
+
+
+
