git push -u origin main

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,17 +1,17 @@
 ﻿@page "/"
-    <h1>在台潘詠周系陳太老架頭套 - 源自陳發科</h1>
-    <h2>指導老師：江弦蒼老師</h2>
-    <h3>【11 演手肱拳】</h3>
+    <h3>在台潘詠周系陳太老架頭套<br /> -- 源自陳發科</h3>
+    <h4>指導老師：江弦蒼老師</h4>
+    <h5>【11 演手肱拳】</h5>
 
 
-    <video width="640" controls>
+    <video width="480" controls>
         <source src="11.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
 
 
 
-    <h3>定式口訣</h3>
+    <h5>定式口訣</h5>
     <ol>
         <li>  身體稍微前移，右手再往前伸，左手再略微下按。       </li>
         <li>   腰向左轉，領兩手逆纏全繞，右手拉回胸前，左手外繞至左前方。      </li>
