check auto size

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -3,8 +3,13 @@
     <h4>指導老師：江弦蒼老師</h4>
     <h5>【11 演手肱拳】</h5>
 
-
-    <video width="480" controls>
+    <style>
+        video {
+            max-width: 100%;
+            height: auto;
+        }
+    </style>
+    <video w controls>
         <source src="11.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
